agregando unas cosas más
se agregaron más cosas y se cambio el color de la letra

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ main {
 .centrado{
     align-items: center;
     text-align: center;
-    color: #ff00fa
+    color: #00d9ff
 }
 
 /* Add a black background color to the top navigation */
