--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,18 @@ ol, ul {
   display: table;
 }
 
+.bannerimage {
+  width: 100%;
+  height: 405px;
+  background-color: purple;
+  background-position: center;
+}
+
+.body {
+  background-color: rgb(15, 15, 15);
+  color: white;
+}
+
 .status {
   margin-bottom: 10px;
 }
